--- a/server/email-templates/activation-mail.ejs
+++ b/server/email-templates/activation-mail.ejs
@@ -97,14 +97,14 @@
                 minutes.
             </p>
             <p>
-                If you did not register for a Becodemy account, please ignore this
+                If you did not register for a FastDeli account, please ignore this
                 email.
             </p>
         </div>
         <div class="email-footer">
             <p>
                 If you have any questions, please don't hesitate to contact us at
-                <a href="mailto:support@fastdeLi.com">support@fastdeLi.com</a>
+                <a href="mailto:support@fastdeLi.com">support@fastdeli.com</a>
             </p>
         </div>
     </div>
