--- a/clients/users-ui/src/app/globals.css
+++ b/clients/users-ui/src/app/globals.css
@@ -26,17 +26,12 @@ body {
     rgb(var(--background-start-rgb));
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-}
-
+/* Firefox */
 input[type="number"] {
   -moz-appearance: textfield;
 }
-
-input::-webkit-outer-spin-button, 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
@@ -61,6 +56,26 @@ input::-webkit-inner-spin-button {
   100% {
     transform: translateX(0);
   }
+}
+
+.banner {
+  background-image: url("https://framerusercontent.com/images/ox1tg69dwg5TMb6flK8EvAlTY.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.backdrop_shaders {
+  background: radial-gradient(
+    50% 50% at 50% 50%,
+    #180f34 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  flex: none;
+  inset: -273px 290px 51px -557px;
+  overflow: hidden;
+  position: absolute;
+  top: 90px;
+  z-index: -1;
 }
 
 .shake {
